--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="card">
-        <img src="images/image-qr-code.png" alt="" />
-        <h2>Improve your front-end skills by building projects</h2>
-        <p>
-          Scan the QR code to visit Frontend Mentor and take your coding skills
-          to the next level
-        </p>
+    <main>
+      <div class="container">
+        <div class="card">
+          <img src="images/image-qr-code.png" alt="" />
+          <h1>Improve your front-end skills by building projects</h1>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
-    </div>
+    </main>
     <!-- Improve your front-end skills by building projects Scan the QR code to visit
     Frontend Mentor and take your coding skills to the next level
     <div class="attribution">
